samples/_failures_safe/1761077210_f66ab9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_320cd195.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_320cd195.c:176:5: error: expected declaration or statement at end of input
  176 |     if (parser.current.type != TOKEN_EOF) {
      |     ^~
./samples/SAFE/__tmp_320cd195.c:176:5: error: expected declaration or statement at end of input
